syntax = "proto3";

option csharp_namespace = "PrimeNumberService.Server.Protos";

package primenumber;

service PrimeNumberValidator {
	rpc CheckPrimeNumber (PrimeNumberRequest) returns (PrimeNumberResponse);
	rpc CheckPrimeNumberStream (stream PrimeNumberRequest) returns (MultiPrimeNumberResponse);
}

message PrimeNumberRequest {
	int64 id = 1;
	int64 timestamp = 2;
	int64 number = 3;
}

message PrimeNumberResponse {
	int64 requestId = 1;
	int64 incomingTimestamp = 2;
	int64 number = 4;
	bool isPrimeNumber = 5;
}

message MultiPrimeNumberResponse {
	repeated PrimeNumberResponse response = 1;
}